--- a/BlinkDetector/app/src/main/AndroidManifest.xml
+++ b/BlinkDetector/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         <service
             android:name=".BluetoothService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".DeviceListActivity"></activity>
     </application>
 
 </manifest>
