--- a/BlinkDetector/app/src/main/AndroidManifest.xml
+++ b/BlinkDetector/app/src/main/AndroidManifest.xml
@@ -13,23 +13,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
-        <service
-            android:name=".BluetoothIntentService"
-            android:exported="false" />
-        <service
-            android:name=".BluetoothService"
-            android:enabled="true"
-            android:exported="true" />
-
-        <activity android:name=".DeviceListActivity"></activity>
+        <activity android:name=".DeviceListActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/select_device"
+            android:theme="@android:style/Theme.Holo.Dialog"></activity>
     </application>
 
 </manifest>
