--- a/BlinkDetector/app/build.gradle
+++ b/BlinkDetector/app/build.gradle
@@ -28,5 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.+'
+    compile 'com.androidplot:androidplot-core:1.5.0'
+
     testCompile 'junit:junit:4.12'
 }
